# rome

./: CMakeLists.txt
cmake/modules/: FindlibOpenBlas.cmake  FindlibProtobuf.cmake
common/: CMakeLists.txt  com_def.h  logging.h  utils.h
io/: CMakeLists.txt  data.h  get_conf.cpp  get_conf.h  text_data.h
matrix/: CMakeLists.txt  expr-inl.h  expr.h  logging.h  matrix-inl.h  matrix.h  matrix_blob.h  matrix_math.h  matrix_shape.h  random.h
ml/: CMakeLists.txt  data_layer.h  emb_layer.cpp  emb_layer.h  full_connected_layer.cpp  full_connected_layer.h  inplace_layer.h  layer.h  layer_factory.cpp  layer_factory.h  nn.cpp  nn.h  relu_layer.cpp  relu_layer.h  sgd_solver.h  sigmoid_layer.cpp  sigmoid_layer.h  softmax_with_loss_layer.cpp  softmax_with_loss_layer.h  softsign_layer.cpp  softsign_layer.h  solver.h  tanh_layer.cpp  tanh_layer.h  text_data_layer.cpp  text_data_layer.h  vsum_layer.cpp  vsum_layer.h
proto/: CMakeLists.txt  snoopy.proto
storage/: CMakeLists.txt  allocator-inl.h  allocator.cc  allocator.h  buffer.h
test/: io_test.cc  layer_test.cc  matrix_test.cc
